--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,22 @@ upload_speed = 921600
 lib_deps = codewitch-honey-crisis/htcw_freertos_thread_pack
 lib_ldf_mode = deep
 
+[env:core2]
+platform = espressif32
+board = m5stack-core2
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
+framework = arduino
+upload_speed=921600
+monitor_speed=115200
+monitor_filters = esp32_exception_decoder
+lib_ldf_mode = deep
+lib_deps = codewitch-honey-crisis/htcw_freertos_thread_pack
+    codewitch-honey-crisis/htcw_m5core2_power
+build_flags= -DM5STACK_CORE2
+upload_port = COM10
+monitor_port=COM10
+
 [env:test]
 platform = espressif32
 board = node32s
